styles/globals.scss
@font-face {
  font-family: Ogg;
  src: url('../public/fonts/Ogg-Roman.otf');
  font-weight: 200;
  font-style: normal;
}

@font-face {
  font-family: Ogg;
  src: url('../public/fonts/Ogg-Italic.otf');
  font-weight: 200;
  font-style: italic;
}

@font-face {
  font-family: WorkSans;
  src: url('../public/fonts/WorkSans-Regular.ttf');
  font-weight: 400;
}

@font-face {
  font-family: WorkSans;
  src: url('../public/fonts/WorkSans-Light.ttf');
  font-weight: 200;
}

@mixin responsive($width, $orientation) {
  @media screen and (orientation: $orientation) and (max-width: $width) {
    @content;
  }
}

@mixin smartphone {
  @include responsive(50.2em, portrait) {
    @content;
  }
}

@mixin smaller-smartphone {
  @include responsive(39em, portrait) {
    @content;
  }
}

:root {
  text-rendering: optimizeLegibility;
  font-size: 64.5%;
  --background-colour: #f4f8f9;
  --primary-font: Ogg;
  --body-font: WorkSans;
  --layout-width: 136.6rem;
  --grid-column: repeat(12, 1fr);
  --span-full-column: 1/-1;
  --grid-column-gutter: 16px;
  --text-colour: #141414;
  --grey: #a4a4a5;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
  text-decoration: none;
  text-transform: uppercase;
  display: inline-block;
}

ul {
  list-style: none;
}

:focus {
  outline: none;
}

button {
  cursor: pointer;
  border: none;
  background-color: transparent;
}

html {
  scroll-behavior: smooth;
}

body {
  max-width: var(--layout-width);
  margin: 0 auto;
  color: var(--text-colour);
  background-color: var(--background-colour);

  @include smartphone {
    margin: 0 24px;
  }
  padding-bottom: 240px;
  @include smartphone {
    padding-bottom: 140px;
  }
}

.grey-font {
  color: var(--grey);
}

.app {
  display: grid;
  grid-template-columns: var(--grid-column);
  column-gap: var(--grid-column-gutter);
  padding-top: 48px;
  @include smartphone {
    padding-top: 40px;
  }
}

.navigation {
  grid-column: var(--span-full-column);
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: var(--body-font);

  @include smartphone {
    align-items: flex-start;
  }
}

.route-nav {
  display: flex;
  font-size: 1.6rem;

  & > *:not(:last-child) {
    margin-right: 48px;
  }

  @include smartphone {
    & > *:not(:last-child) {
      margin-right: 32px;
    }
  }
}

.user-intro {
  grid-column: 2/ -1;
  font-family: var(--primary-font);
  margin-top: 148px;

  @include smartphone {
    margin-top: 124px;
    grid-column: var(--span-full-column);
  }

  @include smaller-smartphone {
    margin-top: 96px;
  }

  & h1 {
    font-size: 13.4rem;
    font-weight: 200;
    line-height: 1.2;

    @include smartphone {
      font-size: 6.4rem;
      line-height: 1.4;
    }

    @include smaller-smartphone {
      font-size: 5rem;
      line-height: 1.5;
    }

    @include responsive(80em, portrait) {
      font-size: 8.4rem;
    }
  }

  & h1 > span {
    display: block;
    font-weight: 200;

    &:first-child {
      font-style: italic;
    }

    &:nth-child(2) {
      margin-left: 10%;
    }

    &:last-child {
      margin-left: 20%;
    }
  }

  & .dev > span {
    display: inline-block;
    font-style: italic;
    font-family: var(--primary-font);
    color: var(--text-colour);
  }
}

.main-content {
  grid-column: 2/-1;
  margin-top: 248px;
  margin-bottom: 196px;

  @include smartphone {
    grid-column: var(--span-full-column);
    margin-top: 180px;
    margin-bottom: 140px;
  }

  @include smaller-smartphone {
    margin-top: 128px;
  }

  & > .main-hero {
    font-family: var(--body-font);
    font-size: 2rem;
    text-transform: uppercase;
    line-height: 2.4;
    width: 688px;
    margin: 0 auto;

    @include smartphone {
      width: 100%;
      font-size: 1.8rem;
    }
  }

  & p:not(:last-of-type) {
    margin-bottom: 48px;
  }
}

.footer {
  grid-column: var(--span-full-column);
  text-align: center;

  > .navigate {
    margin-top: 240px;

    @include smartphone {
      margin-top: 180px;
    }
  }

  .mail-button {
    display: block;
  }
}

.user-button {
  border: 2px solid var(--text-colour);
  height: 72px;
  width: 278px;
  font-size: 1.5rem;
  text-transform: uppercase;
  word-spacing: 2px;

  @include smartphone {
    width: 100%;
  }

  & .user-button__icon {
    display: inline-block;
    margin-left: 24px;
  }
}

.navigate-button {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  cursor: pointer;
  & > *:not(:last-child) {
    margin-bottom: 24px;
  }

  & > :last-child {
    font-size: 1.5rem;
    text-transform: uppercase;
    text-decoration: underline;
  }
}

